# sync-alt

./: Makefile  README.md  dev-requirements.txt  pyproject.toml  requirements.txt
.github/workflows/: test.yaml
src/sync_alt/: sync_alt.py  sync_alt_twitter.py
