[project]
name = "sync-alt"
version = "0.0.1"
authors = [
    { name = "Lucas Werkmeister", email = "mail@lucaswerkmeister.de" },
]
description = "Sync alt text between HTML files."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "beautifulsoup4",
]

[project.optional-dependencies]
dev = [
    "black",
    "mypy",
    "ruff",
]

[project.scripts]
sync-alt = "sync_alt.sync_alt:main"

[tool.mypy]
disallow_untyped_defs = true
files = "."
